Fix player overflow

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -41,3 +41,9 @@
 	width: 200px;
 	max-height: 90px;
 }
+.nb-theme-default nb-card {
+	margin-bottom: 0;
+}
+.nb-theme-default nb-layout .layout .layout-container .content .columns nb-layout-column {
+    padding: 0.75rem 2.25rem 0.75rem;
+}
